[ENH] The classes btk::Point and btk::Analog have a new member 'mp_Data' to store the data associated with them. It will give the possibility to set data from one measure to another without the copy of the values (and other informations, like point's residual). The API were updated in consequence but is still compatible with BTK 0.2.x. The Doxygen documentation was also updated with in some case, the writing of the documentation directly in the classes. This does not follow the coding rules of BTK, but it seems to be a bug with Doxygen. See: https://bugzilla.gnome.org/show_bug.cgi?id=406027

git-svn-id: https://b-tk.googlecode.com/svn/BTK/trunk@1796 93be6e1e-6fcc-11de-baec-69240fdc299a